[package]
name = "rust-grep-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
